# patterns

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: clang-format-check.yml  cmake-multi-platform.yml
include/xitren/allocators/: allocator_state.hpp  list_allocator.hpp  list_manager.hpp  static_heap.hpp  static_heap_allocator.hpp
include/xitren/cache/: exceptions.hpp  lru.hpp
include/xitren/comm/: mediator.hpp  observer.hpp  observer_errors.hpp  observer_static.hpp  pipeline_stage.hpp  pipeline_stage_pool.hpp
include/xitren/comm/values/: observable.hpp  observed.hpp  pre_def.hpp
include/xitren/func/: argv_parser.hpp  data.hpp  fast_pimpl.hpp  interval_event.hpp  log_adapter.hpp  packet.hpp  transaction.hpp
tests/: CMakeLists.txt  interval_test.cpp  patterns_argv_test.cpp  patterns_connector_base_test.cpp  patterns_interval_base_test.cpp  patterns_list_base_allocator.cpp  patterns_lru_base_test.cpp  patterns_mediator_base_test.cpp  patterns_observer_base_test.cpp  patterns_observer_static_base_test.cpp  patterns_observer_values_test.cpp  patterns_package_base_test.cpp  patterns_pipeline_test.cpp  patterns_static_heap_allocator.cpp  patterns_transaction.cpp
